# IJC_project2

./: .gitignore  .gitmodules  Makefile  README.md  htab.h  htab_clear.c  htab_erase.c  htab_init.c  htab_lookup_add.c  htab_move.c  htab_private.h  tail.c  wordcount.c
tests/: CMakeLists.txt  htab.h  htab_bucket_count.c  htab_clear.c  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_lookup_add.c  htab_move.c  htab_private.h  htab_size.c  wordcount.c
